# RAG_MCP

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  reindex.py
src/rag_mcp/: book_processor.py  config.py  mcp_server.py  rag_service.py  text_processor.py  topic_service.py
