[project]
name = "rag-mcp"
version = "0.1.0"
description = "RAG service over books using txtai, exposed as MCP server"
requires-python = ">=3.12"
dependencies = [
    "txtai>=8.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "mcp>=1.0.0",
    "lxml>=5.0",
    "python-docx>=1.1",
]

[project.scripts]
rag-mcp = "rag_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]

[dependency-groups]
dev = []
